fix testing bug

--- a/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
+++ b/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
@@ -93,13 +93,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "LRF-HC925LWr"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "ze4-nDLfK4pw"
    },
    "source": [
@@ -504,11 +497,12 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import tensorflow.io as tf_io\n",
     "import json\n",
-    "import googleapiclient.discovery\n",
-    "from google.api_core.client_options import ClientOptions\n",
+    "import os\n",
+    "import re\n",
+    "import time\n",
+    "\n",
+    "from google.cloud import aiplatform\n",
     "\n",
     "%load_ext tensorboard"
    ]
@@ -761,19 +755,13 @@
    "outputs": [],
    "source": [
     "# View the job's configuration and state.\n",
-    "!gcloud beta ai custom-jobs describe {JOB_ID} --region={REGION}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "B1GwKsrZr7Zc"
-   },
-   "outputs": [],
-   "source": [
-    "# Stream the logs for your job while it's running (can be slow).\n",
-    "!gcloud beta ai custom-jobs stream-logs {JOB_ID} --region={REGION}"
+    "STATE = 'state: JOB_STATE_PENDING'\n",
+    "\n",
+    "while STATE != 'state: JOB_STATE_SUCCEEDED':\n",
+    "    DESCRIPTION = ! gcloud beta ai custom-jobs describe {JOB_ID} --region={REGION}\n",
+    "    STATE = DESCRIPTION[-2]\n",
+    "    print(STATE)\n",
+    "    time.sleep(60)"
    ]
   },
   {
@@ -894,7 +882,7 @@
     "            serving_container_image_uri='us-central1-docker.pkg.dev/cloud-ml-algos/two-tower/deploy',\n",
     "            serving_container_health_route=f'/v1/models/{MODEL_NAME}',\n",
     "            serving_container_predict_route=f'/v1/models/{MODEL_NAME}:predict',\n",
-    "            serving_container_environment_variables={'MODEL_BASE_PATH':'$(AIP_STORAGE_URI)','MODEL_NAME':MODEL_NAME}"
+    "            serving_container_environment_variables={'MODEL_BASE_PATH':'$(AIP_STORAGE_URI)','MODEL_NAME':MODEL_NAME})"
    ]
   },
   {
