Fix beta version

--- a/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
+++ b/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
@@ -521,7 +521,7 @@
         "id": "GgsNm8aim0Ym"
       },
       "source": [
-        "The following table shows parameters that are common to all Vertex Training jobs created using the `gcloud beta ai custom-jobs create` command. See the [official documentation](https://cloud.google.com/sdk/gcloud/reference/beta/ai/custom-jobs/create) for all the possible arguments.\n",
+        "The following table shows parameters that are common to all Vertex Training jobs created using the `gcloud ai custom-jobs create` command. See the [official documentation](https://cloud.google.com/sdk/gcloud/reference/ai/custom-jobs/create) for all the possible arguments.\n",
         "\n",
         "| Parameter | Data type | Description | Required |\n",
         "|--|--|--|--|\n",
@@ -630,7 +630,7 @@
       "source": [
         "learning_job_name = f\"two_tower_cpu_{DATASET_NAME}_{TIMESTAMP}\"\n",
         "\n",
-        "CREATION_LOG = !gcloud beta ai custom-jobs create \\\n",
+        "CREATION_LOG = !gcloud ai custom-jobs create \\\n",
         "  --display-name={learning_job_name} \\\n",
         "  --worker-pool-spec=machine-type=n1-standard-8,replica-count=1,container-image-uri={LEARNER_IMAGE_URI} \\\n",
         "  --region={REGION} \\\n",
@@ -681,7 +681,7 @@
         "\n",
         "!echo $'{config}' > ./config.yaml\n",
         "\n",
-        "CREATION_LOG = !gcloud beta ai custom-jobs create \\\n",
+        "CREATION_LOG = !gcloud ai custom-jobs create \\\n",
         "  --display-name={learning_job_name} \\\n",
         "  --region={REGION} \\\n",
         "  --config=config.yaml\n",
@@ -710,7 +710,7 @@
         "\n",
         "learning_job_name = f\"two_tower_cpu_tfrecord_{DATASET_NAME}_{TIMESTAMP}\"\n",
         "\n",
-        "CREATION_LOG = !gcloud beta ai custom-jobs create \\\n",
+        "CREATION_LOG = !gcloud ai custom-jobs create \\\n",
         "  --display-name={learning_job_name} \\\n",
         "  --worker-pool-spec=machine-type=n1-standard-8,replica-count=1,container-image-uri={LEARNER_IMAGE_URI} \\\n",
         "  --region={REGION} \\\n",
@@ -757,7 +757,7 @@
         "STATE = \"state: JOB_STATE_PENDING\"\n",
         "\n",
         "while STATE != \"state: JOB_STATE_SUCCEEDED\":\n",
-        "    DESCRIPTION = ! gcloud beta ai custom-jobs describe {JOB_ID} --region={REGION}\n",
+        "    DESCRIPTION = ! gcloud ai custom-jobs describe {JOB_ID} --region={REGION}\n",
         "    STATE = DESCRIPTION[-2]\n",
         "    print(STATE)\n",
         "    time.sleep(60)"
@@ -914,7 +914,7 @@
       },
       "outputs": [],
       "source": [
-        "!gcloud beta ai models list --region={REGION} --filter={DISPLAY_NAME}"
+        "!gcloud ai models list --region={REGION} --filter={DISPLAY_NAME}"
       ]
     },
     {
@@ -1055,7 +1055,7 @@
         "\n",
         "ENDPOINT_ID = endpoint.resource_name\n",
         "\n",
-        "!gcloud beta ai endpoints predict {ENDPOINT_ID} \\\n",
+        "!gcloud ai endpoints predict {ENDPOINT_ID} \\\n",
         "  --region={REGION} \\\n",
         "  --json-request=request.json"
       ]
