--- a/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
+++ b/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
@@ -177,8 +177,7 @@
       "source": [
         "! pip3 install {USER_FLAG} --upgrade tensorflow\n",
         "! pip3 install {USER_FLAG} --upgrade google-cloud-aiplatform tensorboard-plugin-profile\n",
-        "! gcloud config set disable_usage_reporting false\n",
-        "! gcloud components update"
+        "! sudo apt-get update && sudo apt-get --only-upgrade install google-cloud-sdk-skaffold google-cloud-sdk-app-engine-python google-cloud-sdk-anthos-auth google-cloud-sdk-app-engine-java google-cloud-sdk google-cloud-sdk-cbt google-cloud-sdk-datalab google-cloud-sdk-app-engine-python-extras google-cloud-sdk-pubsub-emulator google-cloud-sdk-minikube kubectl google-cloud-sdk-bigtable-emulator google-cloud-sdk-kpt google-cloud-sdk-app-engine-grpc google-cloud-sdk-spanner-emulator google-cloud-sdk-config-connector google-cloud-sdk-datastore-emulator google-cloud-sdk-cloud-build-local google-cloud-sdk-local-extract google-cloud-sdk-app-engine-go google-cloud-sdk-firestore-emulator google-cloud-sdk-kubectl-oidc"
       ]
     },
     {
