Update cloud sdk

--- a/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
+++ b/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
@@ -177,9 +177,7 @@
       "source": [
         "! pip3 install {USER_FLAG} --upgrade tensorflow\n",
         "! pip3 install {USER_FLAG} --upgrade google-cloud-aiplatform tensorboard-plugin-profile\n",
-        "! echo \"deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main\" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list\n",
-        "! curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -\n",
-        "! sudo apt-get update && sudo apt-get install google-cloud-sdk"
+        "! gcloud components update --quiet"
       ]
     },
     {
