--- a/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
+++ b/notebooks/official/matching_engine/two-tower-model-introduction.ipynb
@@ -32,7 +32,7 @@
         "<table align=\"left\">\n",
         "\n",
         "  <td>\n",
-        "    <a href=\"https://colab.research.google.com/drive/1xDvsyUNcKb2tm2ut_BehUjBxL4yGIOMb?resourcekey=0-7Z6VVSf6H8WNmjgIAKsN2A#scrollTo=JAPoU8Sm5E6e\"\">\n",
+        "    <a href=\"https://colab.research.google.com/github/GoogleCloudPlatform/vertex-ai-samples/tree/master/notebooks/official/matching_engine/two-tower-model-introduction.ipynb\"\">\n",
         "      <img src=\"https://cloud.google.com/ml-engine/images/colab-logo-32px.png\" alt=\"Colab logo\"> Run in Colab\n",
         "    </a>\n",
         "  </td>\n",
